# llm_voice_chat_embedded_conversation_app

./: .gitignore  LICENSE  README.md  conversation_llm_and_embedding.py  latest_requirements.txt  models.py  notes_conversation_llm_embed.txt  pgvector_langchain.py  pyproject.toml  record_conversation_embedding.txt  script_package_to_add_managed_by_poetry_for_dependency_reconciliation.sh
poetry_requirements_reconciliation/: initial_llm_voice_conversation_embedded_requirements.txt  second_poetry_reconciled_requirements.txt
