[tool.poetry]
name = "llm-chat-embed-app"
version = "0.1.0"
description = "Application using llm locally lmstudio/ollama to have people asking questions using their voice and getting the answer voiced. Langchain is used with postgresql pgvector to store embeddings of questions/answers to make retrieval later on."
authors = ["diallo75012 <11600022@students.koi.edu.au>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
nvidia-cublas-cu12 = "12.1.3.1"
nvidia-cuda-cupti-cu12 = "12.1.105"
nvidia-cuda-nvrtc-cu12 = "12.1.105"
nvidia-cuda-runtime-cu12 = "12.1.105"
nvidia-cudnn-cu12 = "8.9.2.26"
nvidia-cufft-cu12 = "11.0.2.54"
nvidia-curand-cu12 = "10.3.2.106"
nvidia-cusolver-cu12 = "11.4.5.107"
nvidia-cusparse-cu12 = "12.1.0.106"
nvidia-nccl-cu12 = "2.19.3"
nvidia-nvjitlink-cu12 = "12.3.101"
nvidia-nvtx-cu12 = "12.1.105"
absl-py = "^2.1.0"
accelerate = "^0.27.2"
aiohttp = "^3.9.3"
aiosignal = "^1.3.1"
anyascii = "^0.3.2"
anyio = "^4.3.0"
asttokens = "^2.4.1"
astunparse = "^1.6.3"
async-timeout = "^4.0.3"
attrs = "^23.2.0"
audioread = "^3.0.1"
babel = "^2.14.0"
bangla = "^0.0.2"
blinker = "^1.7.0"
blis = "0.7.11"
bnnumerizer = "^0.0.2"
bnunicodenormalizer = "^0.1.6"
cachetools = "^5.3.2"
catalogue = "^2.0.10"
cli-helpers = "^2.3.1"
click = "^8.1.7"
cloudpathlib = "0.16.0"
confection = "^0.1.4"
configobj = "^5.0.8"
contourpy = "^1.2.0"
coqpit = "^0.0.17"
cycler = "^0.12.1"
cymem = "^2.0.8"
cython = "^3.0.8"
dataclasses-json = "^0.6.4"
dateparser = "^1.2.0"
decorator = "^5.1.1"
dill = "^0.3.8"
docopt = "^0.6.2"
einops = "^0.7.0"
encodec = "^0.1.1"
executing = "^2.0.1"
faster-whisper = "^1.0.0"
ffmpeg-python = "^0.2.0"
flask = "^3.0.2"
flask-cors = "^4.0.0"
fonttools = "^4.49.0"
frozenlist = "^1.4.1"
future = "^1.0.0"
g2pkk = "^0.1.2"
gast = "^0.5.4"
google-auth = "^2.28.1"
google-auth-oauthlib = "^1.2.0"
google-pasta = "^0.2.0"
graphviz = "^0.20.1"
greenlet = "^3.0.3"
grpcio = "^1.62.0"
h5py = "^3.10.0"
hangul-romanize = "^0.1.0"
httpx = "^0.27.0"
huggingface-cli = "^0.1"
inflect = "^7.0.0"
inquirerpy = "^0.3.4"
ipython = "^8.22.0"
itsdangerous = "^2.1.2"
jamo = "^0.4.1"
jedi = "^0.19.1"
jieba = "^0.42.1"
jinja2 = "^3.1.3"
joblib = "^1.3.2"
jsonlines = "^4.0.0"
jsonpatch = "^1.33"
jsonpointer = "^2.4"
keras = "^3.0.5"
kiwisolver = "^1.4.5"
langchain = "^0.1.8"
langchain-community = "^0.0.21"
langchain-core = "^0.1.25"
langchain-openai = "^0.0.6"
langcodes = "^3.3.0"
langsmith = "^0.1.5"
lazy-loader = "^0.3"
libclang = "^16.0.6"
librosa = "^0.10.1"
llvmlite = "^0.42.0"
markdown = "^3.5.2"
markupsafe = "^2.1.5"
marshmallow = "^3.20.2"
matplotlib = "^3.8.3"
matplotlib-inline = "^0.1.6"
ml-dtypes = "^0.3.2"
msgpack = "^1.0.7"
multidict = "^6.0.5"
multiprocess = "^0.70.16"
murmurhash = "^1.0.10"
mypy-extensions = "^1.0.0"
nltk = "^3.8.1"
num2words = "^0.5.13"
numba = "^0.59.0"
numpy = "^1.26.4"
weasel = "0.3.4"
trainer = "0.0.36"
thinc = "8.2.3"
oauthlib = "^3.2.2"
opt-einsum = "^3.3.0"
pandas = "^2.2.0"
parso = "^0.8.3"
pendulum = "^3.0.0"
pexpect = "^4.9.0"
pfzy = "^0.3.4"
pgcli = "^4.0.1"
pgspecial = "^2.1.1"
pgvector = "^0.2.5"
pillow = "^10.2.0"
platformdirs = "^4.2.0"
pooch = "^1.8.1"
preshed = "^3.0.9"
prompt-toolkit = "^3.0.43"
psutil = "^5.9.8"
psycopg = "^3.1.18"
psycopg2 = "^2.9.9"
psycopg2-binary = "^2.9.9"
ptyprocess = "^0.7.0"
pure-eval = "^0.2.2"
pyarrow = "^15.0.0"
pyarrow-hotfix = "^0.6"
pyasn1 = "^0.5.1"
pyasn1-modules = "^0.3.0"
pyaudio = "^0.2.14"
pyttsx3 = "^2.90"
pydot = "^2.0.0"
pygments = "^2.17.2"
pynndescent = "^0.5.11"
pyparsing = "^3.1.1"
pypinyin = "^0.50.0"
pysbd = "^0.3.4"
python-crfsuite = "^0.9.10"
python-dateutil = "^2.8.2"
python-dotenv = "^1.0.1"
pytz = "^2024.1"
regex = "^2023.12.25"
requests-oauthlib = "^1.3.1"
rsa = "^4.9"
safetensors = "^0.4.2"
scipy = "^1.12.0"
sentencepiece = "^0.2.0"
setproctitle = "^1.3.3"
six = "^1.16.0"
smart-open = "^6.4.0"
soundfile = "^0.12.1"
soxr = "^0.3.7"
spacy = "^3.7.4"
spacy-legacy = "^3.0.12"
spacy-loggers = "^1.0.5"
sqlalchemy = "^2.0.27"
sqlparse = "^0.4.4"
srsly = "^2.4.8"
stack-data = "^0.6.3"
sudachidict-core = "^20240109"
sudachipy = "^0.6.8"
tabulate = "^0.9.0"
tenacity = "^8.2.3"
tensorboard = "^2.16.2"
tensorboard-data-server = "^0.7.2"
tensorflow-estimator = "^2.15.0"
tensorflow-io-gcs-filesystem = "^0.36.0"
termcolor = "^2.4.0"
tf-keras = "^2.15.0"
threadpoolctl = "^3.3.0"
tiktoken = "^0.6.0"
time-machine = "^2.13.0"
tokenizers = "^0.15.2"
torch = "^2.2.0"
torchaudio = "^2.2.0"
traitlets = "^5.14.1"
transformers = "^4.38.1"
triton = "^2.2.0"
typer = "^0.9.0"
typing-inspect = "^0.9.0"
tzdata = "^2024.1"
tzlocal = "^5.2"
umap-learn = "^0.5.5"
unidecode = "^1.3.8"
wasabi = "^1.1.2"
wcwidth = "^0.2.13"
werkzeug = "^3.0.1"
wrapt = "^1.16.0"
xxhash = "^3.4.1"
yarl = "^1.9.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
